Actualizacion de archivos 26-03-2022

--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -3,7 +3,7 @@
 <ion-content class="ion-padding">
 
   <ion-button (click)="presentAlert()" expand="block" color="primary">
-      Ver Alert
+    Ver Alert Simple
   </ion-button>
 
   <ion-button (click)="presentAlertMultipleButtons()" expand="block" color="secondary">
