--- a/src/app/pages/infinite-scroll/infinite-scroll.page.html
+++ b/src/app/pages/infinite-scroll/infinite-scroll.page.html
@@ -4,7 +4,7 @@
 
     <ion-list>
       <ion-item *ngFor="let item of data; let i= index">
-        <ion-label>Item {{ i+1 }}</ion-label>
+        <ion-label>Itemx {{ i+1 }}</ion-label>
       </ion-item>
     </ion-list>
   
