--- a/src/app/pages/fab/fab.page.html
+++ b/src/app/pages/fab/fab.page.html
@@ -2,23 +2,46 @@
 
 
 <ion-content>
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button>
-          <ion-icon name="add-outline"></ion-icon>
-        </ion-fab-button>
 
-        <ion-fab-list side="top">
-          <ion-fab-button><ion-icon name="logo-vimeo"></ion-icon></ion-fab-button>
-          <ion-fab-button><ion-icon name="logo-facebook"></ion-icon></ion-fab-button>         
-        </ion-fab-list>
-
-        <ion-fab-list side="start">           
-            <ion-fab-button (click)="onClick()"><ion-icon name="logo-instagram"></ion-icon></ion-fab-button>
-            <ion-fab-button><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
-        </ion-fab-list>
+  <ion-list>
     
-          
-       
-    </ion-fab>
+    <ion-item *ngFor="let item of [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19]"> 
+      <ion-label>Awesome Label</ion-label>
+    </ion-item>
 
+  </ion-list>
+
+
+
+    <!-- fab placed in the center of the content with a list on each side -->
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+
+      <ion-fab-button>
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-fab-button>
+
+      <ion-fab-list side="top">
+
+        <ion-fab-button><ion-icon name="logo-vimeo"></ion-icon></ion-fab-button>
+        
+        <ion-fab-button><ion-icon name="logo-facebook"></ion-icon></ion-fab-button>
+
+      </ion-fab-list>
+
+      <ion-fab-list side="start">
+
+        <ion-fab-button><ion-icon name="logo-instagram"></ion-icon></ion-fab-button>
+
+        <ion-fab-button><ion-icon name="logo-twitter"></ion-icon></ion-fab-button>
+
+      </ion-fab-list> 
+     
+    </ion-fab>
+  
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Unila 2022</ion-title>
+  </ion-toolbar>
+</ion-footer>
