--- a/src/app/pages/grid/grid.page.html
+++ b/src/app/pages/grid/grid.page.html
@@ -1,6 +1,5 @@
 <app-header titulo="Grid"></app-header>
 
-
 <ion-content>
 
     <ion-grid>
@@ -14,8 +13,8 @@
 
     <ion-grid fixed>
         <ion-row>
-            <ion-col *ngFor="let item of [1,1,1,1,1,1,1]"
-                    size="3" size-xl="2" sixe-lg="12" sixe-lg="12" >
+            <ion-col *ngFor="let item of [1,1,1,1,1,1,1,1]"
+                 size-xl="2" size-lg="3" size-md="6" size-sm="12">
                 <ion-card>
                     <ion-card-header>
                         <ion-card-subtitle>Awesome Subtitle</ion-card-subtitle>
