--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>home</ion-title>
+
+    <ion-buttons slot="start">
+      <ion-menu-button menu="first"></ion-menu-button>
+    </ion-buttons>
+
+    
   </ion-toolbar>
 </ion-header>
 
