--- a/src/app/pages/inputforms/inputforms.page.html
+++ b/src/app/pages/inputforms/inputforms.page.html
@@ -4,9 +4,9 @@
   
     <ion-list>
       <ion-list-header>
-        <ion-label>Formulario: </ion-label>
+        <ion-label>Formulario: {{formulario.status}} </ion-label>
       </ion-list-header>
-      <form #formulario="ngForm" (ngSubmit)="onSubmit()">
+      <form #formulario="ngForm" (ngSubmit)="onSubmit(formulario)">
       <ion-item>
         <ion-label position="floating">E-Mail <ion-text color="danger">*</ion-text></ion-label>
         <ion-input 
@@ -14,6 +14,7 @@
                   name="email" 
                   type="email" 
                   placeholder="Email"
+                  [(ngModel)]="usuario.email"
                   ></ion-input>
       </ion-item>
       <ion-item>
@@ -23,6 +24,7 @@
                   name="password" 
                   type="password" 
                   placeholder="Password"
+                  [(ngModel)]="usuario.password"
                   ></ion-input>
       </ion-item>
       <ion-button
