--- a/src/app/pages/loading/loading.page.html
+++ b/src/app/pages/loading/loading.page.html
@@ -1,1 +1,9 @@
 <app-header titulo="Loading"></app-header>
+
+<ion-content class="ion-padding">
+
+    <ion-button (click)="onClick()" expand="block">
+      Click me
+    </ion-button>
+  
+  </ion-content>
